src/objects/Apttus_Config2__Incentive__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ProductScopeOper__c</fullName>
        <description>The product scope operator</description>
        <inlineHelpText>The product scope operator</inlineHelpText>
        <label>Product Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>One or more products associated with the incentive</description>
        <inlineHelpText>One or more products associated with the incentive</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecurrenceFrequency__c</fullName>
        <description>The recurrence frequency.  e.g. Loyalty program cycle.</description>
        <inlineHelpText>The recurrence frequency.  e.g. Loyalty program cycle.</inlineHelpText>
        <label>Recurrence Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionScopeOper__c</fullName>
        <description>The region scope operator</description>
        <inlineHelpText>The region scope operator</inlineHelpText>
        <label>Region Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionScope__c</fullName>
        <description>One or more regions associated with the incentive</description>
        <inlineHelpText>One or more regions associated with the incentive</inlineHelpText>
        <label>Region Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalEffectiveDate__c</fullName>
        <description>The date when the renewal for the incentive takes effect</description>
        <inlineHelpText>The date when the renewal for the incentive takes effect</inlineHelpText>
        <label>Renewal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchField__c</fullName>
        <description>The incentive search field. This field is used in the side bar search</description>
        <externalId>true</externalId>
        <inlineHelpText>The incentive search field</inlineHelpText>
        <label>Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The incentive priority sequence. Indicates the order of application of the incentive.</description>
        <inlineHelpText>The incentive priority sequence. Indicates the order of application of the incentive.</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The incentive status</description>
        <inlineHelpText>The incentive status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Being Renewed</fullName>
                </value>
                <value>
                    <fullName>In Renewal</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Being Terminated</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StopProcessingMoreIncentives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent incentives from processing</description>
        <inlineHelpText>Indicator to prevent subsequent incentives from processing</inlineHelpText>
        <label>Stop Processing More Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubUseType__c</fullName>
        <label>Application Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Point Accrual</fullName>
                    <default>true</default>
                    <label>Point Accrual</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Milestone Incentive</fullName>
                </value>
                <value>
                    <fullName>Price Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Upgrade__c</fullName>
        <label>Upgrade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>During Program</fullName>
                </value>
                <value>
                    <fullName>Next Program</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The incentive use type</description>
        <inlineHelpText>The incentive use type</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                    <default>true</default>
                    <label>Promotion</label>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Milestone Incentive</fullName>
                </value>
                <value>
                    <fullName>Price Program</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__VersionNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The incentive version number</description>
        <inlineHelpText>The incentive version number</inlineHelpText>
        <label>Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Incentive</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>Apttus_Config2__ApplicationMethod__c</columns>
        <columns>Apttus_Config2__UseType__c</columns>
        <columns>Apttus_Config2__AutoApply__c</columns>
        <columns>Apttus_CMConfig__AgreementId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All_Active_Promotions</fullName>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>NAME</columns>
        <columns>Apttus_Config2__IncentiveCode__c</columns>
        <columns>Apttus_Config2__ApplicationMethod__c</columns>
        <columns>Apttus_Config2__UseType__c</columns>
        <columns>Apttus_Config2__AutoApply__c</columns>
        <columns>Apttus_Config2__RegionScope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Config2__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Promotions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__Rebates</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>Apttus_Config2__ApplicationMethod__c</columns>
        <columns>Apttus_Config2__UseType__c</columns>
        <columns>Apttus_Config2__EffectiveDate__c</columns>
        <columns>Apttus_Config2__ExpirationDate__c</columns>
        <columns>Apttus_Config2__ContextType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Apttus_Config2__AutoApply__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Config2__UseType__c</field>
            <operation>equals</operation>
            <value>Rebate</value>
        </filters>
        <filters>
            <field>Apttus_Config2__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Rebates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebate_Templates</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Apttus_Config2__IncentiveNumber__c</columns>
        <columns>Apttus_Config2__Sequence__c</columns>
        <columns>Apttus_Config2__UseType__c</columns>
        <columns>Apttus_Config2__ApplicationMethod__c</columns>
        <columns>Apttus_Config2__Description__c</columns>
        <columns>Apttus_Config2__EffectiveDate__c</columns>
        <columns>Apttus_Config2__ExpirationDate__c</columns>
        <columns>Apttus_Config2__Status__c</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Template</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>template</value>
        </filters>
        <label>Rebate Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apttus_Config2__DateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( NOT(ISNULL(Apttus_Config2__EffectiveDate__c)) &amp;&amp; NOT(ISNULL(Apttus_Config2__ExpirationDate__c)) &amp;&amp; Apttus_Config2__EffectiveDate__c &gt; Apttus_Config2__ExpirationDate__c, true, false)</errorConditionFormula>
        <errorMessage>Effective date cannot be greater then expiration date.</errorMessage>
    </validationRules>
</CustomObject>